<resources>
    <string name="dungeon1text">"All three 💎 are in the golden pots.   There are many potions in the upper invisible areas. For example, above secret area 1 and ending area.   After meeting captain, you wil come across two boxes. Destroy the upper one to gain access to the area you have previously been to.   If you go to the place where the cinematic starts, you will find good sword and armor in the two white pots.   Second secret area is not reachable without the use of jumpman suit or special abilities, you cannot obtain it in the first try.       "</string>
    <string name="dungeon2text">All three 💎 are in the golden pots.\n\n
If you save the Dude he will gift you with a good early game sword and you will also receive an achievement.\n\n
On the ceiling above the secret area 5, there is a poison dagger, which is really good for early and mid game.\n\n
    </string>
    <string name="dungeon3text">All three 💎 are in the golden pots.\n\n
Collect all three 💎 to unlock bonus level.\n\n
You cannot open the chest in the first secret area on the first try, since you need one key for it and you can only buy it in the shop, which unlocks after this level find it in the future dungeons.\n\n
You can reach secret area 3 by using one box plus jumpman suit or two boxes instead. In case you are using the two boxes strategy. first bring the left one under the right one and then push the right on the top. Afterwards push the both of them carefully until you reach the destination. \n\n
Above the third golden pot, there is a dagger of light, which is very good for early game.\n\n
    </string>
    <string name="dungeon3bonus1">
        Unlock this bonus by getting all three 💎 in dungeon 3.\n\n
        Step 1 is optional and will get you a small amount of gold.\n\n
        Step 2: Find the red button on the ceiling.\n\n
    </string>
    <string name="dungeon3bonus2">
        Step 3: In order to activate the button, you can use different strategies. The easiest one is to just use jumpman suit, which will be available in the future dungeons. In the picture you can see that it is also possible without it, just jump on the zombies head and then double jump to activate the button. Be sure to have an armor which provides you with at least 2\% jump impulse.\n\n
    </string>
    <string name="dungeon3bonus3">
        Step 4: After activating the button, an zombie will appear, step in front of him to make him attack you and then avoid the attack. This will destroy the wall and you will be able to obtain the goods.\n\n
    </string>
    <string name="dungeon4text">
        All three 💎 are in the golden pots.\n\n
        The captain is invincible and cannot die. If you proceed to the dungeon on the top platforms, she will kill all the bottom enemies by herself.\n\n
    </string>
    <string name="dungeon5text">
        All three 💎 are in the golden pots.\n\n
        Be sure to use the wind element armors to avoid spike damage.\n\n
        The tanky zombie is easier to beat if you fight him from the high ground.\n\n
    </string>
    <string name="dungeon5bonustext1">
        Unlock this bonus by getting all three 💎 in dungeon 5.\n\n
        First pick the left entrance.\n\n
    </string>
    <string name="dungeon5bonustext2">
        Just continue up the path.\n\n
    </string>
    <string name="dungeon5bonustext3">
        Now choose the middle path, which contains the previously mentioned item - Insect Crusher.\n\n
        This item will help you if you are having difficulties with the  next chapter!\n\n
    </string>
    <string name="dungeon6text">
        All three 💎 are in the golden pots.\n\n
        You can now use the hammer, which you obtained in the previous bonus dungeon to deal with spiders easier.\n\n
        The first secret area contains Hero\'s set, which is good for swords, daggers and hammers. It also gives you spike protection, which allows you to play the dungeon safer.\n\n
    </string>
    <string name="dungeon7text">
        Two 💎 are in the golden pots. One is in the area, which can be unlocked by clicking the button.\n\n
        Be sure to have at least one iron key for the bonus stage.\n\n
        You can use the box at the beginning to activate the button for the bottom area with the 💎.\n\n
        The third secret are can be reached by jumping above the flames.\n\n
    </string>
    <string name="dungeon7bonustext1">
        Unlock this bonus by getting all three 💎 in dungeon 7.\n\n
        You will have to be fast, since the platforms get destroyed in three seconds after you jump on them.\n\n
        Just follow the line made out of gold 🪙.\n\n
    </string>
    <string name="dungeon7bonustext2">
        Once you reach the highest one, jump at the top of the square and the jump in the area with the chest.\n\n
        After this, just jump back down to the next platform and finish the dungeon.\n\n
    </string>
    <string name="dungeon8text">
        All three 💎 are in the golden pots.\n\n
        You can bring the Dude to the Fire Spear at the beginning of the dungeon to unlock an achievement.\n\n
        Be sure to always stand in front of the dude to soak all the damage if necessary. You can use potions but he cannot.\n\n
        If the Dude survives, he will give you a nice axe.\n\n
    </string>
    <string name="dungeon9text">
        All three 💎 are in the golden pots.\n\n
        A really good dungeon, which trains your aim for the next chapter. The easiest way to get the box to activate the button is by using non-spinning daggers, like poison dagger, which you found in one of the previous dungeons.\n\n
        Preferably use air armor to avoid spike damage.\n\n
        When you finish the dungeon, be sure to check out new items in the shop.\n\n
    </string>
    <string name="dungeon10text">
        All three 💎 are in the golden pots.\n\n
        You do not necessarily need a hammer for these spiders, since they are bigger than the poisonous ones.\n\n
        You can use time-slowing special skills if you want to run under the falling traps.\n\n
    </string>
    <string name="dungeon10bossfighttext">
        The boss attack pattern is pretty simple. He attacks four times in a row to the position you are in at the time of his attack.\n\n
        What you should do is remain at the floor and avoid his projectiles by going slightly forward.\n\n
        After he fires his fourth projectile, you can just jump to his height and deal damage to him. Rinse and repeat.\n\n
    </string>
    <string name="dungeon11text">
        All three 💎 are in the golden pots.\n\n
        Collect all three 💎 to unlock bonus level.\n\n
        If you are struggling to avoid projectiles, you could use class like Warrior or Priest.\n\n
        First secret area contains <font color="#A020F0"> Nazguh </font> ring, which can be used for multiple item combinations.\n\n
    </string>
    <string name="dungeon11bonustext1">
        Unlock this stage by getting all three 💎 in dungeon 11.\n\n
        Step 1: Trigger the skeleton on the top platfrom to start following you. You can do this by just letting him see you.\n\n
        Step 2: Run away from him when he starts chasing you.\n\n
    </string>
    <string name="dungeon11bonustext2">
        Step 3: Run towards the left side wall and wait for the skeleton to arrive.\n\n
        Step 4: When skeleton attacks you, jump on the top platform and wait for him to destroy the block and press the button.\n\n
    </string>
    <string name="dungeon11bonustext3">
        Bonus: Jump above the area above the crate to collect some gold!\n\n
        Step 5: Move the crate carefully to the button. Be careful not to drop it to the bottom where the skeleton is!\n\n
        Step 6: Quickly enter the room and then go back up to the platform, where you dodged skeleton projectiles. Repeat this few times until all the spiders are out of the room.\n\n
    </string>
    <string name="dungeon11bonustext4">
        Step 7: After you have baited all enemies in the left area, you can collect all the gold in the room and finish the dungeon!\n\n
    </string>
    <string name="dungeon12text">
        First 💎 is in second secret area. The second one is in the golden pot and the third one is in front of the fire launcher.\n\n
        Jumpman armor is really useful here, since it allows you to jump to the certain areas without dying or getting damaged.\n\n
        Fourth secret areas contains <font color="#FFA500"> Narya </font> fire ring, which is very good for Mage and High Mage.\n\n
    </string>
    <string name="dungeon13text">
        All three 💎 are on the way to the dungeon end, you cannot miss them.\n\n
        The using a fire armor or ring gives you protection against lava, enabling you to open two secret areas.\n\n
        To open the first secret area you have to activate the button in the nearby lava pool.\n\n
        The second secret area contains <font color="#00FF00"> Ring of Protection </font>.\n\n
    </string>
    <string name="damage_in_calculation">"Damage: "</string>
    <string name="armor_in_calculation">"Armor: "</string>
    <string name="speed_in_calculation">"Speed: "</string>
    <string name="jump_impulse_in_calculation">"Jump Impulse: "</string>
    <string name="elite_obsidian_set">Elite Obsidian Set</string>
    <string name="ifrits_disciple_robe">Ifrit\'s Disciple Robe</string>
    <string name="antiheros_set">Anti-hero\'s Set</string>
    <string name="shaman_ring">Shaman Ring</string>
    <string name="umbranian_short_sword">Umbranian Short Sword</string>
    <string name="swords">Swords</string>
    <string name="staffs_and_grimoires">Staffs and Grimoires</string>
    <string name="daggers_and_shurikens">Daggers and Shurikens</string>
    <string name="axes">Axes</string>
    <string name="spears">Spears</string>
    <string name="hammers_and_maces">Hammers and Maces</string>
    <string name="silver_axe">Silver Axe</string>
    <string name="insect_crusher">Insect Crusher</string>
    <string name="gadarasts_staff">Gadarast\'s Staff</string>
    <string name="last_survivors_dagger">Last Survivor\'s Dagger</string>
    <string name="umbranian_cutter">Umbranian Cutter</string>
    <string name="thunder_hammer">Thunder Hammer</string>
    <string name="dark_mace">Dark Mace</string>
    <string name="ten_kills">10</string>
    <string name="twenty_kills">20</string>
    <string name="thirty_kills">30</string>
    <string name="kills">Kills</string>
    <string name="rewards">Rewards</string>
    <string name="fourty_kills">40</string>
    <string name="fifty_kills">50</string>
    <string name="sixty_kills">60</string>
    <string name="seventy_kills">70</string>
    <string name="eighty_kills">80</string>
    <string name="hundred_kills">100</string>
    <string name="hundred_fifty_kills">150</string>
    <string name="two_hundred_kills">200</string>
    <string name="three_hundred_kills">300</string>
    <string name="survival_dungeon_1">Survival Dungeon 1</string>
    <string name="survival_tutorial">Tutorial</string>
    <string name="survival1_text">For this one you will need a weapon that does not hit the middle platform. This will allow you to hit the enemies on the other side and block the projectiles. If a spider spawns in front of you, just attack the stone behind you to kill it easily.</string>
    <string name="attack_speed">Attack Speed: </string>
    <string name="pierce_count">Pierce Count: </string>
    <string name="projectile_persistence">Projectile Persistence</string>
    <string name="poisonous_attack">Poisonous Attack</string>
    <string name="frost_attack">Frost Attack</string>
    <string name="pierce_area_damage">Pierce Area Damage</string>
</resources>