<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_background"
    android:outlineAmbientShadowColor="#FFFFFF"
    android:outlineSpotShadowColor="#1E0D0D"
    tools:context=".ItemSelection">

    <HorizontalScrollView
        android:id="@+id/buttonsScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/recyclerView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Add your buttons here -->
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/swords"
                android:textColor="#FFFFFF"
                android:background="@drawable/gradientbuttoncolor"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/staffs_and_grimoires"
                android:textColor="#FFFFFF"
                android:background="@drawable/gradientbuttoncolor"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daggers_and_shurikens"
                android:textColor="#FFFFFF"
                android:background="@drawable/gradientbuttoncolor"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/axes"
                android:textColor="#FFFFFF"
                android:background="@drawable/gradientbuttoncolor"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spears"
                android:textColor="#FFFFFF"
                android:background="@drawable/gradientbuttoncolor"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hammers_and_maces"
                android:textColor="#FFFFFF"
                android:background="@drawable/gradientbuttoncolor"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:layout_marginTop="55dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="3"
        tools:listitem="@layout/item_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
